# zephyr

./: CMakeLists.txt  CODEOWNERS  Kconfig.zephyr  west.yml
boards/arm/adafruit_kb2040/: adafruit_kb2040-pinctrl.dtsi  adafruit_kb2040.dts  adafruit_kb2040_defconfig  sparkfun_pro_micro.dtsi
boards/arm/raspberrypi_pico/: Kconfig.defconfig  raspberrypi_pico-pinctrl.dtsi  raspberrypi_pico.dts  raspberrypi_pico.yaml  raspberrypi_pico_defconfig
boards/arm/raspberrypi_pico/doc/: index.rst
boards/arm/rpi_pico/: rpi_pico.dts  rpi_pico.yaml
boards/arm/rpi_pico/doc/: index.rst
cmake/modules/: arch.cmake  boards.cmake  build_configuration.cmake  dts.cmake  extensions.cmake  generic_toolchain.cmake  git.cmake  kconfig.cmake  kernel.cmake  root.cmake  shields.cmake  soc.cmake  user_cache.cmake  west.cmake  zephyr_default.cmake  zephyr_module.cmake
doc/: CMakeLists.txt
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.rpi_pico  gpio_rpi_pico.c
drivers/misc/pio_rpi_pico/: CMakeLists.txt  Kconfig  pio_rpi_pico.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.rpi_pico  pinctrl_rpi_pico.c
drivers/pwm/: CMakeLists.txt  Kconfig  Kconfig.raspberrypi  pwm_raspberrypi.c
drivers/serial/: CMakeLists.txt  Kconfig.rpi_pico  uart_rpi_pico.c  uart_rpi_pico_pio.c
drivers/usb/device/: CMakeLists.txt  Kconfig  usb_dc_raspberrypi.c
dts/arm/raspberrypi/: rp2040.dtsi
dts/bindings/: vendor-prefixes.txt
dts/bindings/misc/: raspberrypi,pico-pio.yaml
dts/bindings/pinctrl/: raspberrypi,pico-pinctrl.yaml
dts/bindings/pwm/: raspberrypi,rp2-pwm.yaml
dts/bindings/serial/: raspberrypi,pico-uart-pio.yaml
dts/bindings/usb/: raspberrypi,rp2-usbd.yaml
include/dt-bindings/pinctrl/: rpi-pico-rp2040-pinctrl.h
include/zephyr/drivers/misc/pio_rpi_pico/: pio_rpi_pico.h
modules/: Kconfig  Kconfig.rpi_pico
modules/hal_rpi_pico/: CMakeLists.txt  Kconfig
modules/hal_rpi_pico/pico/: config_autogen.h
modules/micropython/: CMakeLists.txt  Kconfig  mpconfigport.h
samples/boards/rpi_pico/boot_stage2/: CMakeLists.txt
samples/boards/rpi_pico/pio_uart/: CMakeLists.txt  README.rst  app.overlay  prj.conf  sample.yaml
samples/modules/micropython/hello_world/: CMakeLists.txt  prj.conf
samples/modules/micropython/hello_world/src/: main.c
scripts/pylib/twister/: twisterlib.py
soc/arm/raspberrypi/: Kconfig  Kconfig.defconfig
soc/arm/raspberrypi/rp2/: Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  pinctrl_soc.h  rp2_init.c
soc/arm/rpi_pico/rp2/: CMakeLists.txt  Kconfig.series  Kconfig.soc  linker.ld  pinctrl_soc.h  rp2_init.c  soc.c  soc.h
